# send_links_aeternum_telegram_bot

./: .env.example  .gitignore  README.md  bot.py  docker-compose.yml  message_text.py  pyproject.toml  requirements.txt  smart_search.py  song_controller.py
database/models/: song.py
database/models/mixins/: __init__.py
database/versions/: 827785c8bec1_add_song_table.py  b02ca5e94445_write_default_songs_to_db.py
default_data/: Songs.csv  Songs.txt  default_songs.csv  read_songs.py
docker/python/: setup.sh
docker_persistent_data/mysql/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  binlog.000003  binlog.000004  binlog.000005  binlog.000006  binlog.000007  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
docker_persistent_data/mysql/#innodb_temp/: temp_1.ibt  temp_10.ibt  temp_2.ibt  temp_3.ibt  temp_4.ibt  temp_5.ibt  temp_6.ibt  temp_7.ibt  temp_8.ibt  temp_9.ibt
docker_persistent_data/mysql/mysql/: general_log_207.sdi  slow_log_208.sdi
docker_persistent_data/mysql/performance_schema/: accounts_142.sdi  binary_log_trans_184.sdi  cond_instances_81.sdi  data_lock_waits_158.sdi  data_locks_157.sdi  events_errors_su_136.sdi  events_errors_su_137.sdi  events_errors_su_138.sdi  events_errors_su_139.sdi  events_errors_su_140.sdi  events_stages_cu_108.sdi  events_stages_hi_109.sdi  events_stages_hi_110.sdi  events_stages_su_111.sdi  events_stages_su_112.sdi  events_stages_su_113.sdi  events_stages_su_114.sdi  events_stages_su_115.sdi  events_statement_116.sdi  (+86 more)
models/: song.py
(+10 files in other folders)
