[tool.poetry]
name = "eternum_bot"
version = "0.1.0"
description = ""
authors = ["lukyanets-ai <lukyanets_ai@groupbwt.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = "^13.10"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
