[tool.poetry]
name = "eternum_bot"
version = "0.1.0"
description = ""
authors = ["alexlukyanets <alexlukyanets18@gmail.com>, whitekar"]

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = "^13.10"
python-dotenv = "^0.19.2"
SQLAlchemy = "^1.4.31"
alembic = "^1.7.5"
mysqlclient = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
